pitest works